add protobuffer serialization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,12 @@ set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMakeModules)
 
 find_package(Boost 1.50.0 COMPONENTS system filesystem thread program_options regex REQUIRED)
 find_package(ICU 4.8 REQUIRED)
+find_package(Protobuf 2.4 REQUIRED)
 
 INCLUDE_DIRECTORIES(
     ${Boost_INCLUDE_DIRS}
     ${ICU_INCLUDE_DIRS}
+    ${PROTOBUF_INCLUDE_DIRS}
     ${CMAKE_SOURCE_DIR}/include
     .
 )
@@ -20,6 +22,7 @@ INCLUDE_DIRECTORIES(
 SET(LIBS_MISC)
 LIST(APPEND LIBS_MISC ${Boost_LIBRARIES})
 LIST(APPEND LIBS_MISC ${ICU_LIBRARIES})
+LIST(APPEND LIBS_MISC ${PROTOBUF_LIBRARIES})
 
 ADD_SUBDIRECTORY(json_spirit)
 ADD_SUBDIRECTORY(pugixml)
@@ -33,5 +36,5 @@ ADD_SUBDIRECTORY(net)
 ADD_SUBDIRECTORY(analyzer)
 ADD_SUBDIRECTORY(indexer)
 ADD_SUBDIRECTORY(searcher)
-
+ADD_SUBDIRECTORY(test)
 
