--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required(VERSION 2.8)
-add_executable(test test_main.cpp)
-TARGET_LINK_LIBRARIES(test net parser argos_ri_backend parser serialization query index analyzer common pugixml ${LIBS_MISC})
+#add_executable(test test_main.cpp)
+add_executable(pb_reader pb_reader.cpp)
+TARGET_LINK_LIBRARIES(pb_reader serialization ${LIBS_MISC})
