--- a/serialization/CMakeLists.txt
+++ b/serialization/CMakeLists.txt
@@ -3,5 +3,6 @@ set(SOURCE_LIST)
 file(GLOB H_LIST "*.h")
 file(GLOB CPP_LIST "*.cpp")
 list(APPEND SOURCE_LIST ${H_LIST} ${CPP_LIST})
-add_library(serialization STATIC ${SOURCE_LIST})
+PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS result.proto)
+add_library(serialization STATIC ${PROTO_SRCS} ${PROTO_HDRS} ${SOURCE_LIST})
 
