Fix CMakeLists.txt, find result.pb.h

--- a/serialization/CMakeLists.txt
+++ b/serialization/CMakeLists.txt
@@ -4,5 +4,6 @@ file(GLOB H_LIST "*.h")
 file(GLOB CPP_LIST "*.cpp")
 list(APPEND SOURCE_LIST ${H_LIST} ${CPP_LIST})
 PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS result.proto)
+INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES}, ${CMAKE_BINARY_DIR}/serialization)
 add_library(serialization STATIC ${PROTO_SRCS} ${PROTO_HDRS} ${SOURCE_LIST})
 
