Build static executables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,16 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMakeModules)
 
+if(ARGOS_BUILD_STATIC)
+    set(Boost_USE_STATIC_LIBS on)
+    set(Boost_USE_STATIC_RUNTIME on)
+    set(CMAKE_FIND_LIBRARY_SUFFIXES .a)
+    set(BUILD_SHARED_LIBS OFF)
+    set(CMAKE_EXE_LINKER_FLAGS "-static")    
+endif() 
+
 find_package(Boost 1.50.0 COMPONENTS system filesystem thread program_options regex REQUIRED)
-find_package(ICU 4.8 REQUIRED)
+find_package(ICU 4.8 REQUIRED data i18n uc)
 find_package(Protobuf 2.4 REQUIRED)
 
 INCLUDE_DIRECTORIES(
