--- a/indexer/CMakeLists.txt
+++ b/indexer/CMakeLists.txt
@@ -1,3 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 add_executable(indexer indexer_main.cpp)
-TARGET_LINK_LIBRARIES(indexer analyzer parser argos_ri_backend analyzer query index common json_spirit pugixml ${LIBS_MISC} analyzer pthread dl)
+if(CMAKE_SYSTEM_NAME MATCHES "Linux")
+	set(LIBDL "dl")
+endif()
+TARGET_LINK_LIBRARIES(indexer analyzer parser argos_ri_backend analyzer query index common json_spirit pugixml ${LIBS_MISC} analyzer pthread ${LIBDL})
